Fix broken styles of filter panel

--- a/orienteer-core/src/main/resources/org/orienteer/core/web/orienteer.css
+++ b/orienteer-core/src/main/resources/org/orienteer/core/web/orienteer.css
@@ -190,7 +190,7 @@ div.ajax-indicator {
 	overflow: hidden;
 }
 
-div.panel.panel-default{
+div.panel.widget{
 	height: 100%;
 	width: 100%;
 }
